added text to other pages

--- a/courses.html
+++ b/courses.html
@@ -4,8 +4,32 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum quis laborum veritatis vitae vel eaque nobis nesciunt maxime commodi earum sed minus dolorem, illum id similique quibusdam officiis, impedit quod.</p> 
+    <header>
+        <div class="logo">
+          <img src="./assets/index2.png" alt="Index 2 photo">
+        </div>
+        <nav>
+          <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="about.html">About Us</a></li>
+            <li><a href="courses.html">Courses</a></li>
+            <li><a href="offerings.html">Offerings</a></li>
+            <li><a href="schedule.html">Schedule</a></li>
+            <li><a href="crew.html">Meet the Crew</a></li>
+            <li><a href="contact.html">Contact</a></li>
+          </ul>
+        </nav>
+      </header>
+
+      <section class="hero">
+        <h1>Class Offerings</h1>
+        <p>Ask about multi class discounts for multiple students and multiple classes booked at one time!
+            Text books and course materials are included.</p> 
+        <!-- <a href="#courses" class="cta-button">Explore Courses</a> -->
+      </section>
 </body>
 </html>
+
