--- a/index.html
+++ b/index.html
@@ -14,7 +14,10 @@
         <nav>
           <ul>
             <li><a href="index.html">Home</a></li>
+            <li><a href="about.html">About Us</a></li>
             <li><a href="courses.html">Courses</a></li>
+            <li><a href="offerings.html">Offerings</a></li>
+            <li><a href="gallery.html">gallery</a></li>
             <li><a href="schedule.html">Schedule</a></li>
             <li><a href="crew.html">Meet the Crew</a></li>
             <li><a href="contact.html">Contact</a></li>
