added courses, offerings, and contact pages

--- a/courses.html
+++ b/courses.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Courses</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -17,6 +17,7 @@
             <li><a href="about.html">About Us</a></li>
             <li><a href="courses.html">Courses</a></li>
             <li><a href="offerings.html">Offerings</a></li>
+            <li><a href="gallery.html">Gallery</a></li>
             <li><a href="schedule.html">Schedule</a></li>
             <li><a href="crew.html">Meet the Crew</a></li>
             <li><a href="contact.html">Contact</a></li>
@@ -26,6 +27,64 @@
 
       <section class="hero">
         <h1>Class Offerings</h1>
+        <table>
+          <tr>
+            <th>Code</th>
+            <th>Description</th>
+            <th>Pricing</th>
+            <th>Length</th> 
+          </tr>
+          <tr>
+            <td>ASA 101</td>
+            <td>This is the beginning class. This class will take the beginner student
+              from no experience to being able to pilot a 35 foot cruiser in and out
+              of the slip, Raise, lower and trim the sails, in daylight moderate conditions.</td>
+              <td>Per Group pricing.
+                1st student $800.00
+                Additional students $700.00 </td>
+                <td>2 Days</td>
+          </tr>
+          <tr>
+            <td>ASA 103</td>
+            <td>This class is the second in the certification process. This class adds more
+              sailing skills and practice, plus adds chart reading and navigation. VHF radio
+              operations and additional knots are included. Additional docking sailing and sail
+              trim practice in daylight moderate conditions are part of this class.</td>
+              <td>Per Group pricing.
+                1st student $800.00
+                Additional students $700.00
+                (Combined with 101 class
+                has a $100.00 discount per
+                student in a 3 day class) </td>
+                <td>2 Days</td>
+          </tr>
+          <tr>
+            <td>ASA 104</td>
+            <td>	This class goes in depth into the boat systems. We will examine the
+             engine systems, (Raw water, Closed water, Fuel ) House water system,
+             Head system, House and shore power systems. We will cover general
+             maintenance and trouble shooting procedures. We will plan a trip to a
+             nearby port and will travel to that port using dead reckoning procedures. </td>
+              <td>Per Group pricing.
+                1st student $800.00
+                Additional students $700.00 </td>
+                <td>2 Days</td>
+          </tr>
+          <tr>
+            <td>ASA 105</td>
+            <td>This is a take home class. No on board sailing. This class will teach more in
+              depth navigation skills. Chart reading, tide tables and course plotting.</td>
+              <td>$450.00 per Student</td>
+                <td></td>
+          </tr>
+          <tr>
+            <td>ASA 106</td>
+            <td>This class teaches navigation, trip planning and night time sailing in moderate
+              conditions. This trip will be overnight to a more distant port.</td>
+              <td>$1500.00 per student</td>
+                <td>3 Days</td>
+          </tr>
+        </table>
         <p>Ask about multi class discounts for multiple students and multiple classes booked at one time!
             Text books and course materials are included.</p> 
         <!-- <a href="#courses" class="cta-button">Explore Courses</a> -->
