--- a/gallery.html
+++ b/gallery.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Schedule</title>
+    <title>Gallery</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -26,8 +26,9 @@
       </header>
 
       <section class="hero">
-        <h1>Schedule</h1>
-    <p>Add calendar here</p>
+        <h1>Gallery</h1>
+     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat dolor ratione modi, quisquam porro aut cupiditate molestias, laudantium, neque facere atque perspiciatis veritatis placeat doloribus voluptatum! Sapiente earum tempore fuga.</p>
+        <!-- <a href="#courses" class="cta-button">Explore Courses</a> -->
       </section>
       <div class="images-container">
         <a href="https://asa.com/" target="_blank">
