--- a/offerings.html
+++ b/offerings.html
@@ -26,7 +26,41 @@
 
       <section class="hero">
         <h1>Other Offerings</h1>
-        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Autem neque itaque officia. Dolor, recusandae cupiditate magni consequuntur tenetur libero aspernatur suscipit maiores laudantium debitis nam vel officiis! Tempore, dignissimos molestias?</p>
+        <table>
+          <tr>
+            <th>Offering</th>
+            <th>Description</th>
+            <th>Price</th>
+          </tr>
+          <tr>
+            <td>Day Sail</td>
+            <td>4 hour Captained Charter on Lake Macatawa or Lake Michigan.</td>
+            <td>$600.00 Up to 6 people</td>
+          </tr>
+          <tr>
+            <td>Evening Sail</td>
+            <td> 2 hour evening cruise on Lake Macatawa or Lake Michigan</td>
+            <td>$450.00 Up to 6 people</td>
+          </tr>
+          <tr>
+            <td>Bare Boat Charter</td>
+            <td> $550.00 per day or $2700.00 per week. Evidence of appropriate sailing
+              experience is required or a paid evaluation is required by one of our captains.
+              Generally $350.00 for the paid evaluation.  
+              Agreement and signature on our charter contract and $500.00 damage deposit
+              is required.</td>
+            <td> $550.00 per day
+              $2700.00 per week.</td>
+          </tr>
+          <tr>
+            <td>Team Building</td>
+            <td>Corporate team building and outings are available. Short learn to sail classes
+              or just go for a meeting on a sailboat. Custom events also entertained just ask.</td>
+            <td>$675.00 per boat 6 people
+              Maximum per boat.</td>
+          </tr>
+        </table>
+        <!-- <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Autem neque itaque officia. Dolor, recusandae cupiditate magni consequuntur tenetur libero aspernatur suscipit maiores laudantium debitis nam vel officiis! Tempore, dignissimos molestias?</p> -->
         <!-- <a href="#courses" class="cta-button">Explore Courses</a> -->
       </section>
 </body>
