--- a/about.html
+++ b/about.html
@@ -17,6 +17,7 @@
                 <li><a href="about.html">About Us</a></li>
                 <li><a href="courses.html">Courses</a></li>
                 <li><a href="offerings.html">Offerings</a></li>
+                <li><a href="gallery.html">Gallery</a></li>
                 <li><a href="schedule.html">Schedule</a></li>
                 <li><a href="crew.html">Meet the Crew</a></li>
                 <li><a href="contact.html">Contact</a></li>
